--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/5c4bcdf4b6.js" crossorigin="anonymous"></script>
-    <title>Vite + React</title>
+    <script
+      src="https://kit.fontawesome.com/5c4bcdf4b6.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>AWS Week 12</title>
   </head>
   <body>
     <div id="root"></div>
